# atac_mapper

./: .cruft.json  .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/workflows/: release.yaml
docs/: api.md  conf.py  contributing.md  index.md  requirements.txt
docs/notebooks/: example.ipynb  topic_matching_tutorial.ipynb
docs/notebooks/tutorials/: index.rst  topic_matching_tutorial.ipynb
src/atac_mapper/: __init__.py
src/atac_mapper/reference_mapping/: mapping_atac.py
src/atac_mapper/topic_matching/: __init__.py  topic_match.py  utils.py
test_data/: cell_region_matrix.mtx  inference_stats.txt  inferred_topics.csv  region_cell_matrix.mtx  region_topic.csv
tests/: generate_test_data.py  test_basic.py  test_mapping_atac.py  test_topic_match.py
